objects/EUR_CRM_Auto_Number_Container__c.object
<CustomObject>
    <description>For System use, to implement auto number assignment per record type</description>
    <fields>
        <fullName>EUR_CRM_Auto_Number_Length__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Auto Number Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Current_Count__c</fullName>
        <defaultValue>-1</defaultValue>
        <label>Current Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Number_Prefix__c</fullName>
        <label>Number Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Auto Number Container (EU)</label>
    <nameField>
        <label>Record Type Name (Dev Name)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auto Number Container (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_DE_Auto_Number_Container</fullName>
        <active>true</active>
        <label>EUR DE Auto Number Container</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>